force-app/main/default/objects/Quota__c/Quota__c.object-meta.xml
<CustomObject>
    <description>Stores quota targets per salesperson per fiscal period. Used for Quota Attainment calculation: (Booking_Amount__c x Quota_Relief_Pct__c) / Quota_Amount__c. Managed by Revenue Ops.</description>
    <label>Quota</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>