force-app/main/default/objects/Quota__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>Fiscal year this quota belongs to (e.g. 2026). Used for annual rollup reports.</description>
    <inlineHelpText>Fiscal year (e.g. 2026). Auto-derived from Period_Start_Date__c by Revenue Ops convention.</inlineHelpText>
    <label>Fiscal Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>