force-app/main/default/objects/Quota__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free-text notes about this quota record (e.g. mid-year adjustment reason, ramp notes for new hires).</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>