force-app/main/default/objects/Quota__c/fields/Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_End_Date__c</fullName>
    <description>Last day of the quota period (fiscal quarter). Together with Period_Start_Date__c defines the window for matching Won Opportunities.</description>
    <inlineHelpText>Last day of the fiscal quarter this quota applies to (e.g. 2026-03-31 for Q1 FY26).</inlineHelpText>
    <label>Period End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>