force-app/main/default/objects/Quota__c/fields/Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_Start_Date__c</fullName>
    <description>First day of the quota period (fiscal quarter). Used to match Won Opportunities to the correct quota period via CloseDate.</description>
    <inlineHelpText>First day of the fiscal quarter this quota applies to (e.g. 2026-01-01 for Q1 FY26).</inlineHelpText>
    <label>Period Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>