force-app/main/default/objects/Quota__c/fields/Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quota_Amount__c</fullName>
    <description>The MRC quota target for this salesperson in this period. Denominator in: Quota Attainment = (Booking_Amount__c x Quota_Relief_Pct__c) / Quota_Amount__c.</description>
    <inlineHelpText>Target MRC bookings for this period. Set by Revenue Ops per active commission plan.</inlineHelpText>
    <label>Quota Amount (MRC)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>