force-app/main/default/objects/Quota__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The salesperson this quota target applies to. Maps to Opportunity OwnerId (SP1), Salesperson_2__c (SP2), or Salesperson_3__c (SP3).</description>
    <inlineHelpText>The salesperson whose quota this record defines. One record per salesperson per period.</inlineHelpText>
    <label>Salesperson</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotas</relationshipLabel>
    <relationshipName>Quotas</relationshipName>
    <type>Lookup</type>
</CustomField>